# qsogen

./: __init__.py  config.py  model_colours.py  pyproject.toml  qsosed.py
filters/: PS1_g.filter  PS1_i.filter  PS1_r.filter  PS1_y.filter  PS1_z.filter
